# cync

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: clipboard.h  watcher.h
src/: clipboard_and.cpp  clipboard_wayland.cpp  clipboard_win.cpp  clipboard_wl.cpp  main.cpp  watcher.cpp
src/utils/: watcher.cpp
tests/: CMakeLists.txt  clipboard_test.cpp
